--- a/Exercises/Hashing/HashingDoubleProbePRO.html
+++ b/Exercises/Hashing/HashingDoubleProbePRO.html
@@ -9,13 +9,7 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-
-  <style>
-    .jsavcontainer {
-      border: 0px;
-    }
-    #reset { margin-right: 20px;}
-  </style>
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 </head>
 <body data-height="750" data-width="950">
 <script>
@@ -166,7 +160,7 @@ var getH2 = function(K) {
   <p>h1(<var>currentKey</var>) = <var>H1</var>.</p>
   <p>h2(<var>currentKey</var>) = <var>H2</var>.</p>
         <input id="reset" type="button" value="Reset" />
-        <div id="jsav"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       <div class="solution" data-type="custom">
         <div class="guess">
           [userInput]
