More hashing fixes

--- a/Exercises/Hashing/OpenHashPRO.html
+++ b/Exercises/Hashing/OpenHashPRO.html
@@ -17,8 +17,15 @@
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
-    .jsavcanvas { height: 340px;}
+    .jsavcanvas { height: 340px; }
+    .jsavlist .jsavlistnode {
+      min-height: 25px !important;
+      max-height: 25px !important;
+      line-height: 23px !important;
+    }
   </style>
+</head>
+
 <body data-height="720" data-width="950">
 <script>
 var
@@ -56,7 +63,6 @@ var clickHandler = function (arr, index) {
     jsavLists[index].addLast(jsavInput.value(ValueIndex));
     jsavLists[index].layout({center: false});
     jsavInput.unhighlight(ValueIndex);
-    arr.value(index, jsavInput.value(ValueIndex));
     jsavInput.value(ValueIndex, "");
     ValueIndex = -1;
   }
@@ -132,7 +138,6 @@ function checkAnswer(arr_size) {
       }
     }
   }
-console.log("curr is " + curr + ", arr_size is " + arr_size);
   if (curr !== arr_size) { return false; }
   return true;
 }
