--- a/Exercises/Hashing/HashingBucketPRO.html
+++ b/Exercises/Hashing/HashingBucketPRO.html
@@ -1,24 +1,22 @@
 <!-- Bucket Hashing mini-proficiency exercise.
+     Buckets as hash table size.
      Written by Cliff Shaffer -->
 
 <!DOCTYPE html>
 <html data-require="math">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>Bucket Hashing Exercise</title>
+  <title>Bucket Hashing Proficiency Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
-  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
+  <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcanvas { height: 350px;}
-    .jsavverticalarray .jsavindexlabel {
-      top: 5px !important;
-    }
   </style>
 </head>
 
@@ -27,16 +25,17 @@
 var
   jsav,             // The JSAV object
   inputkey,         // The value that the user is inserting
-  arr_size,         // Full array size
+  arr_size,         // Hash table size
+  overflow_size,    // Overflow array size
   userInput,        // Boolean: Tells us if user ever did anything
   initData = [],    // The original problem instance (for reset)
   answer = [],      // The answer array
   answer_over = [], // Overflow answer array
   overflow,         // Boolean to indicate if this problem instance
                     // results in overflowing
-  jsavInput,        // JSAV array for problem instance
-  jsavOverflow,     // JSAV overflow array
-  empty = [],       // Dummy for empty data to reset bin array
+  jsavInput,        // JSAV array for hash table
+  jsavOverflow,     // JSAV array for overflow
+  empty = [],       // Dummy for empty data to reset hash table
   empty8 = [];      // Dummy for empty data for overflow
 
 // Handle a click event on an array
@@ -46,56 +45,27 @@ var clickHandler = function (index, e) {
   userInput = true;
 };
 
-// Convenience function for setting another type of highlight
-// (will be used for showing which elements will be compared during sort)
-var setGray = function (a, index) {
-  a.css(index, {"background-color": "#eee" });
-};
-
-// function that creates and initialises the arrays
-function resetInit() {
-  var i;
-  var offset = 107;
-
-  // Do initializations, both for initial use and reset
-  userInput = false;
-  jsavInput = jsav.ds.array(initData, {indexed: true, center: false,
-                            layout: "vertical", left: 20, top: 30});
-  jsav.label("Hash Table", {left: 0, top: 0});
-  jsav.label("<b style='color:#0b0;'>B0</b>", {left: 80, top: 51});
-  jsav.label("<b style='color:#0b0;'>B1</b>", {left: 80, top: 113});
-  jsav.label("<b style='color:#0b0;'>B2</b>", {left: 80, top: 175});
-  jsav.label("<b style='color:#0b0;'>B3</b>", {left: 80, top: 237});
-  jsav.label("<b style='color:#0b0;'>B4</b>", {left: 80, top: 299});
-  for (i = 0; i < 4; i++) {
-    jsav.g.line(15, offset + (i * 62), 65, offset + (i * 62), {"stroke-width": 2});
-  }
-  setGray(jsavInput, [0, 1, 4, 5, 8, 9]);
-  jsavInput.click(clickHandler);
-  jsavOverflow = jsav.ds.array(empty8, {indexed: true, center: false,
-                           layout: "vertical", top: 30, left: 200});
-  jsav.label("Overflow", {left: 190, top: 0});
-  jsavOverflow.click(clickHandler);
-  jsavInput.layout();
-  jsavOverflow.layout();
-  jsav.step();
-}
-
 // reset function definition
 var f_reset = function () {
-  jsavInput.clear();
-  jsavOverflow.clear();
-  resetInit();
+  var i;
+  userInput = false;
+  // Re-initialize the arrays
+  for (i = 0; i < arr_size; i++) {
+    jsavInput.value(i, initData[i]);
+  }
+  for (i = 0; i < overflow_size; i++) {
+    jsavOverflow.value(i, "");
+  }
 };
 
 // Initialize the problem instance (and set the answer arrays)
 // Original bucket hash method
 var gen_instance = function (steps) {
   var i, k;
-  for (i = 0; i < 8; i++) {
+  for (i = 0; i < overflow_size; i++) {
     answer_over[i] = empty8[i];
   }
-  for (i = 0; i < 10; i++) {
+  for (i = 0; i < arr_size; i++) {
     answer[i] = empty[i];
   }
   if ((steps === 1) || (steps === 2)) { // Make a collision
@@ -119,18 +89,38 @@ var gen_instance = function (steps) {
   else { answer_over[0] = inputkey; } // steps === 2
 };
 
-// Initialise JSAV library
+// Do the one-time initializations
 var initJSAV = function (key, steps) {
   var i;
+  var offset = 107;
+
+  userInput = false;
   inputkey = key;
-  // Do all of the one-time initializations
   arr_size = 10;
+  overflow_size = 8;
   jsav = new JSAV("jsav");
   jsav.recorded();
-  for (i = 0; i < 10; i++) { empty[i] = ""; }
-  for (i = 0; i < 8; i++) { empty8[i] = ""; }
+  for (i = 0; i < arr_size; i++) { empty[i] = ""; }
+  for (i = 0; i < overflow_size; i++) { empty8[i] = ""; }
   gen_instance(steps);
-  resetInit();
+  jsav.label("Hash Table", {left: 0, top: 0});
+  jsav.label("<b style='color:#0b0;'>B0</b>", {left: 80, top: 51});
+  jsav.label("<b style='color:#0b0;'>B1</b>", {left: 80, top: 113});
+  jsav.label("<b style='color:#0b0;'>B2</b>", {left: 80, top: 175});
+  jsav.label("<b style='color:#0b0;'>B3</b>", {left: 80, top: 237});
+  jsav.label("<b style='color:#0b0;'>B4</b>", {left: 80, top: 299});
+  for (i = 0; i < 4; i++) {
+    jsav.g.line(20, offset + (i * 62), 70, offset + (i * 62), {"stroke-width": 2});
+  }
+  // Array initializations
+  jsavInput = jsav.ds.array(initData, {indexed: true, center: false,
+                                       layout: "vertical", left: 20, top: 30});
+  jsavInput.addClass([0, 1, 4, 5, 8, 9], "greybg");
+  jsavInput.click(clickHandler);
+  jsavOverflow = jsav.ds.array(empty8, {indexed: true, center: false,
+                                        layout: "vertical", left: 200, top: 30});
+  jsav.label("Overflow", {left: 190, top: 0});
+  jsavOverflow.click(clickHandler);
   // Set up handler for reset button
   $("#reset").click(function () { f_reset(); });
 };
@@ -138,12 +128,12 @@ var initJSAV = function (key, steps) {
 // Check user's answer for correctness
 function checkAnswer() {
   var i;
-  for (i = 0; i < 10; i++) {
+  for (i = 0; i < arr_size; i++) {
     if (jsavInput.value(i) !== answer[i]) {
       return false;
     }
   }
-  for (i = 0; i < 8; i++) {
+  for (i = 0; i < overflow_size; i++) {
     if (jsavOverflow.value(i) !== answer_over[i]) {
       return false;
     }
@@ -162,29 +152,29 @@ function checkAnswer() {
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <div class="question">
-  <p>You are given a hash table of 5 buckets, each of size 2.
-          Using the <b>first</b> bucket hash method described above,
-    put key value <var>iKey</var> into the hash table.</p>
+	<p>You are given a hash table of 5 buckets, each of size 2.
+           Using the <b>first</b> bucket hash method described above,
+           put key value <var>iKey</var> into the hash table.</p>
         <input id="reset" type="button" value="Reset" />
-  <div id="jsav" class="jsavcanvas"></div>
+        <div id="jsav" class="jsavcanvas"></div>
       </div>
       <div class="solution" data-type="custom">
-  <div class="guess">
-    [userInput]
-  </div>
-  <div class="validator-function">
-    if (!checkAnswer() && !guess[0])
-      return ""; // User did not click, and correct answer is not
-    // initial array state
-    else return checkAnswer();
-  </div>
+        <div class="guess">
+          [userInput]
+        </div>
+        <div class="validator-function">
+          if (!checkAnswer() && !guess[0])
+          return ""; // User did not click, and correct answer is not
+                     // initial array state
+          else return checkAnswer();
+        </div>
       </div>
       <div class="hints">
         <p>Bucket hash first uses the hash function to select a bucket
           (the number of buckets serves as the hash table size).</p>
         <p>If there is a collision, then linear probing is used to
           locate another slot <b>within that bucket</b>.
-  <p>If the bucket is full, then put the record into the overflow.</p>
+        <p>If the bucket is full, then put the record into the overflow.</p>
       </div>
     </div>
   </div>
