Minor fixes in some KA questions

--- a/Exercises/Binary/BSTdMCQ.html
+++ b/Exercises/Binary/BSTdMCQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>BST: d</title>
+  <title>BST Runtime</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -11,16 +11,22 @@
 <div class="exercise">
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="question">BST search/insert/delete operations
-      typically run in time O(d). What is d?</p>
+      <p class="question">BST search, insert, and delete operations
+        typically run in time O(d). What is d?</p> 
       <div class="solution"><var>"The depth of the appropriate node in the tree"</var></div>
       <ul class="choices">
 	<li><var>"The number of divisions at each level"</var></li>
 	<li><var>"The number of entries in each node"</var></li>
 	<li><var>"The number of nodes in the tree"</var></li>
-	<li><var>"The total number of entries in all the nodes of the tree"<var></li>
+	<li><var>"The total number of entries in all the nodes of the tree"</var></li>
       </ul>
       <div class="hints">
+	<p>Think about a given insert or search operation.</p>
+        <p>How many nodes get looked at?</p>
+        <p>The operation moves down the tree, looking at a node at
+          each level that it visits.</p>
+        <p>So the total work is the number of nodes that it visits,
+          which is the same as the depth of the last node.</p>
       </div>
     </div> 
   </div>
