Tracing exercises categorized

--- a/Exercises/RecurTutor/rectMCQerrfx21.html
+++ b/Exercises/RecurTutor/rectMCQerrfx21.html
@@ -13,7 +13,21 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="question"> 
-      Which of the following change in the previous question code of the given functions will cause function writeWithCommas to work properly:
+      Which of the following change in the following code of the given functions will cause function writeWithCommas to work properly:
+      <pre>	
+     public class Intformatter{		
+      public static void writeThreeDigits(int n){
+      	System.out.print(n/100);	
+	System.out.print((n/10)%10);		
+	System.out.print(n%10);
+       }
+       public static void writeWithCommas(int n){	
+	if(n<1000)
+          System.out.print(n);			
+        else{ writeThreeDigits(n%1000);
+	  System.out.print(",");	
+          writeWithCommas(n/1000);}}}
+	</pre>
       </p>
 
       <div class="solution"><var>Interchange the line: <pre>writeThreeDigits(n%1000);</pre> With the line:<pre>writeWithCommas(n/1000);</pre>in the writeWithCommas function.</var></div>
