Binary tree non prog exs modified

--- a/Exercises/RecurTutor2/BinaryTreeTF4.html
+++ b/Exercises/RecurTutor2/BinaryTreeTF4.html
@@ -13,7 +13,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.
-      <p class="question"> We can construct a binary tree  given its inorder and preorder traversals.</p>
+      <p class="question"> We can reconstruct a binary tree  given its inorder and preorder traversals.Given that the nodes has no duplicate values.</p>
       <div class="solution"><var>"True"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
