--- a/Exercises/RecurTutor2/BinaryTreeTF2.html
+++ b/Exercises/RecurTutor2/BinaryTreeTF2.html
@@ -13,7 +13,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.
-      <p class="question"> We can construct a binary tree  given its postorder and preorder traversals.</p>
+      <p class="question"> We can reconstruct a binary tree given the nodes sequences in the case of postorder and preorder traversals. . Given that the nodes has no duplicate values.</p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
