--- a/Exercises/RecurTutor2/BinaryTreeTF3.html
+++ b/Exercises/RecurTutor2/BinaryTreeTF3.html
@@ -13,7 +13,7 @@
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.
-      <p class="question"> We can construct a binary tree given it is a binary search tree and given its preorder traversal.</p>
+      <p class="question"> We can reconstruct a binary tree given it is a binary search tree and given its preorder traversal. Given that the nodes has no duplicate values.</p>
       <div class="solution"><var>"True"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
