Line numbers of the program editor displayed in the summary questions

--- a/Exercises/Development/BTLeafPROG.html
+++ b/Exercises/Development/BTLeafPROG.html
@@ -4,9 +4,7 @@
   <title> Binary Tree Leaf Nodes KA Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script>
-    window.OpenPopKa = true;
-  </script>
+  <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <style>
     #codeTextarea{
@@ -32,7 +30,6 @@
 </head>
 <body data-height="550" data-width="950">
 <script>
-<!--
 // Indicate that this is a OpenPop exercise
 window.OpenPopKa = true;
 var lineObjOffsetTop = 2;
@@ -89,7 +86,6 @@ function positionLineObj(obj,ta) {
 $(document).ready(function() {
   createTextAreaWithLines('codeTextarea');
 });
--->
 </script>
 <div class="exercise">
   <div class="vars">
