--- a/Exercises/RecurTutor/recCodeCompSumm3.html
+++ b/Exercises/RecurTutor/recCodeCompSumm3.html
@@ -4,10 +4,11 @@
   <title> Recursion Code Completion: Sum Function Recursive Call </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
+  <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
 </head>
+
 
 <body>
   <div class="exercise" data-name="recwrc4PROG"></div>
