--- a/Exercises/RecurTutor/recCodeCompSumm1.html
+++ b/Exercises/RecurTutor/recCodeCompSumm1.html
@@ -4,11 +4,9 @@
   <title> Recursion Code Completion: Base Case </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
+  <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
- 
   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
-  <!--<script src="../../lib/ExAreaPROG.js"> </script>-->
 </head>
 
 <body>
