--- a/Exercises/RecurTutor/recCodeCompSumm2.html
+++ b/Exercises/RecurTutor/recCodeCompSumm2.html
@@ -4,8 +4,8 @@
   <title> Recursion Code Completion: Math Function Recursive Call </title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
+  <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
-  <script src="../../lib/odsaStyle-min.css"></script>
   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
 </head>
 
