Programming Exercises Summary questionsfixed

--- a/Exercises/RecurTutor/recwbca2PROG.html
+++ b/Exercises/RecurTutor/recwbca2PROG.html
@@ -4,7 +4,7 @@
   <title> Recursion Programming Exercise 2</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script> window.OpenPopKa = true;</script>
+  <script> window.OpenPopKa = true;  </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
@@ -100,8 +100,7 @@ String recursiveprint(String[] list, int index) {
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+         window.summexName = "recwbca2PROG";
         </div>
       </div>
       <div class="hints">
