--- a/Exercises/RecurTutor/recwbcba5PROG.html
+++ b/Exercises/RecurTutor/recwbcba5PROG.html
@@ -4,7 +4,7 @@
   <title> Recursion Programming Exercise 5</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script> window.OpenPopKa = true;</script>
+  <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
@@ -103,8 +103,7 @@ return mult(x-1, y) + y;
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+          window.summexName=  "recwbcba5PROG";
         </div>
       </div>
       <div class="hints">
