--- a/Exercises/RecurTutor/recwbcrc3PROG.html
+++ b/Exercises/RecurTutor/recwbcrc3PROG.html
@@ -97,8 +97,7 @@ $(document).ready(function() {
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+         window.summexName=  "recwbcrc3PROG";
         </div>
       </div>
       <div class="hints">
