--- a/Exercises/RecurTutor/recwrc10PROG.html
+++ b/Exercises/RecurTutor/recwrc10PROG.html
@@ -104,7 +104,7 @@ $(document).ready(function() {
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
          
-         //return "openPop";
+         window.summexName=  "recwrc10PROG";
         </div>
       </div>
       <div class="hints">
