--- a/Exercises/RecurTutor/recwrc11PROG.html
+++ b/Exercises/RecurTutor/recwrc11PROG.html
@@ -100,7 +100,7 @@ return //<<Missing a Recursive call>>
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
          
-         //return "openPop";
+        window.summexName= "recwrc11PROG";
         </div>
       </div>
       <div class="hints">
