--- a/Exercises/RecurTutor/recwrc12PROG.html
+++ b/Exercises/RecurTutor/recwrc12PROG.html
@@ -102,8 +102,7 @@ return count + //<<Missing a Recursive call>>
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+        window.summexName= "recwrc12PROG";
         </div>
       </div>
       <div class="hints">
