--- a/Exercises/RecurTutor/recwrc4PROG.html
+++ b/Exercises/RecurTutor/recwrc4PROG.html
@@ -106,8 +106,7 @@ $(document).ready(function() {
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+            window.summexName=  "recwrc4PROG";
         </div>
       </div>
       <div class="hints">
