--- a/Exercises/RecurTutor/recwrc6PROG.html
+++ b/Exercises/RecurTutor/recwrc6PROG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 6</title>
+  <title> Recursion Programming Exercise 3</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
@@ -67,8 +67,7 @@ $(document).ready(function() {
 </script>
 </head>
 <body>
-  
-
+   
 <div class="exercise">
   <div class="vars">
     <var id="listel1">randRange(0, 99)</var>
@@ -79,6 +78,7 @@ $(document).ready(function() {
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
+   
       <p class="problem" id = "test">  Given the following recursive write down the missing recursive call such that this function computes the value of y to the x power:
 
     
@@ -94,14 +94,14 @@ $(document).ready(function() {
 
 </textarea></p>
 
+
       <div class="question">
 	
       </div>
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+         window.summexName=  "recwrc6PROG";
         </div>
       </div>
       <div class="hints">
