--- a/Exercises/RecurTutor/recwrc7PROG.html
+++ b/Exercises/RecurTutor/recwrc7PROG.html
@@ -98,8 +98,7 @@ $(document).ready(function() {
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+         window.summexName=  "recwrc7PROG";
         </div>
       </div>
       <div class="hints">
