--- a/Exercises/RecurTutor/recwbc1PROG.html
+++ b/Exercises/RecurTutor/recwbc1PROG.html
@@ -4,7 +4,7 @@
   <title> Recursion Programming Exercise 1</title>
  <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script> window.OpenPopKa = true;</script>
+  <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
@@ -103,8 +103,7 @@ int largest(int[] numbers, int index) {
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+         window.summexName= "recwbc1PROG";
         </div>
       </div>
       <div class="hints">
