--- a/Exercises/RecurTutor/recwbcba9PROG.html
+++ b/Exercises/RecurTutor/recwbcba9PROG.html
@@ -4,7 +4,7 @@
   <title> Recursion Programming Exercise 9</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
-  <script> window.OpenPopKa = true;</script>
+  <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../lib/odsaStyle-min.css"></script>
   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
@@ -102,8 +102,7 @@ $(document).ready(function() {
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+          window.summexName=  "recwbcba9PROG";
         </div>
       </div>
       <div class="hints">
