--- a/Exercises/RecurTutor/recwrc8PROG.html
+++ b/Exercises/RecurTutor/recwrc8PROG.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html data-require="math math-format word-problems spin">
 <head>
-  <title> Recursion Programming Exercise 8</title>
-  <script src="../../lib/jquery.min.js"></script>
+  <title> Recursion Programming Exercise 3</title>
+ <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script> window.OpenPopKa = true; </script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="../../lib/odsaStyle-min.css"></script>
   <link rel= "stylesheet" href="../../lib/ExAreaPROG.css" type="text/css">
   <script>
 // Indicate that this is a OpenPop exercise
@@ -65,6 +66,7 @@ $(document).ready(function() {
   createTextAreaWithLines('codeTextarea');
 });
 </script>
+  
 </head>
 <body>
    
@@ -78,16 +80,16 @@ $(document).ready(function() {
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Given the following recursive function write down the missing recursive call such that this function computes the factorial of n. (Assume n is always positive. factorial of  n= n* n-1 * n-2*...1)
-      <br />
+   <p class="problem" id = "test"> Given the following recursive function write down the missing base case condition and recursive call such that this function computes logb n.
+  <br />
     </h4>
 
-    <textarea  id="codeTextarea">int fact(int n)
+    <textarea  id="codeTextarea">int log(int b, int n )
 {
-  int result;
-  if(n==1)
-   return 1;
-  return //<<Missing a Recursive call>>
+   // <<Missing base case condition>>
+     return 1;
+   else
+     return //<<Missing a Recursive call>>
 }
 </textarea></p>
 
@@ -97,8 +99,7 @@ $(document).ready(function() {
       <div class="solution" data-type="custom">
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
-         
-         //return "openPop";
+         window.summexName= "recwrc8PROG";
         </div>
       </div>
       <div class="hints">
