Changed warning message for complete binary tree KA exercise.

--- a/Exercises/Development/CompleteBinaryTree.html
+++ b/Exercises/Development/CompleteBinaryTree.html
@@ -67,7 +67,7 @@ function whichNode(chance) {
   <div class="problems">
     <div id="problem-type-or-description">
       <p class="problem">WARNING! Read the conditions for the problems
-        in this set very carefully! The type of tree and node structure
+        in this set very carefully! The type of relation and node
         can change from problem to problem.</p>
       <p class="question">For the above complete binary tree, what is
         the <var>relation</var> of the node labeled <var>node</var>?
