Checking on students defined vars infrastructure enhanced

--- a/Exercises/RecurTutor/recw30PROG.html
+++ b/Exercises/RecurTutor/recw30PROG.html
@@ -55,6 +55,8 @@ int temp;
        <div class="guess"> [ $('#codeTextarea').val() ] </div>
         <div class="validator-function">
          window.checkdefvar =  "True";
+         // The first one is already defined in the code so the student should not define more and the others should not be declared at all
+         window.listoftypes = "int,double,float,char";
         </div>
       </div>
       <div class="hints">
