Add some testing for multiple PROG exercises

--- a/Exercises/Development/BTLeafPROG.html
+++ b/Exercises/Development/BTLeafPROG.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-require="math math-format word-problems spin">
+<html data-require="math">
 <head>
   <title> Binary Tree Leaf Nodes KA Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
