Fixed issues with Binary Tree exercises

--- a/Exercises/Binary/TreeOverheadSumm.html
+++ b/Exercises/Binary/TreeOverheadSumm.html
@@ -7,6 +7,9 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
 </head>
 <body data-height="650" data-width="950">
+  <div class="exercise" data-name="TCostMCQ"></div>
+  <div class="exercise" data-name="TPreorder2MCQ"></div>
+  <div class="exercise" data-name="TVisitMCQ"></div>
   <div class="exercise" data-name="TreeOverhead1"></div>
   <div class="exercise" data-name="TreeOverhead2"></div>
   <div class="exercise" data-name="TreeOverhead3"></div>
