--- a/Exercises/Binary/DefSumm.html
+++ b/Exercises/Binary/DefSumm.html
@@ -4,9 +4,15 @@
   <title>Tree Definition Summary Questions</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
+  <script src="../../JSAV/lib/jquery.transit.js"></script>
+  <script src="../../JSAV/lib/raphael.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
+  <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
 </head>
-<body>
+
+<body data-height="650" data-width="950">
   <div class="exercise" data-name="DBinFalseMCQ" data-weight="1"></div>
   <div class="exercise" data-name="DCompMinFIB" data-weight="1"></div>
   <div class="exercise" data-name="DFullCompMCQ" data-weight="1"></div>
