--- a/Exercises/Binary/Dprobs.html
+++ b/Exercises/Binary/Dprobs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Tree Height</title>
+  <title>Tree Definition Questions</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -17,9 +17,8 @@
   </style>
 </head>
 
-<body>
+<body data-height="650" data-width="950">
 <script>
-var jsav;
 var initJSAV = function () {
   var jsav = new JSAV("jsav");
   jsav.recorded();
@@ -43,101 +42,102 @@ var initJSAV = function () {
     <var id="JSAV">initJSAV()</var>
   </div>
 
-<div class="problems">
+  <div class="problems">
 
-  <div id="problem-type-or-description-2">
-    <div class="vars">
-      <var id="ANS">5</var>
+    <div id="problem-type-or-description-2">
+      <div class="vars">
+        <var id="ANS">5</var>
+      </div>
+      <p class="problem">
+        <div id="jsav" class="jsavcanvas"></div>
+      </p>
+      <p class="question">How many internal nodes does this tree have?</p>
+      <p class="solution" data-type="text"><var>ANS</var></p>
     </div>
-    <p class="problem">
+
+    <div id="problem-type-or-description-2">
+      <div class="vars">
+        <var id="ANS">4</var>
+      </div>
+      <p class="problem">
+        <div id="jsav" class="jsavcanvas"></div>
+      </p>
+      <p class="question">How many leaf nodes does this tree have?</p>
+      <p class="solution" data-type="text"><var>ANS</var></p>
+    </div>
+
+    <div id="problem-type-or-description-2">
+      <div class="vars">
+        <var id="ANS">6</var>
+      </div>
+      <p class="problem">
+        <div id="jsav" class="jsavcanvas"></div>
+      </p>
+      <p class="question">How many nodes in the tree have at least one sibling?</p>
+      <p class="solution" data-type="text"><var>ANS</var></p>
+    </div>
+
+    <div id="problem-type-or-description-2">
+      <div class="vars">
+        <var id="ANS">8</var>
+      </div>
+      <p class="problem">
+        <div id="jsav" class="jsavcanvas"></div>
+      </p>
+      <p class="question">How many descendents does the root of this
+         tree have?</p>
+      <p class="solution" data-type="text"><var>ANS</var></p>
+    </div>
+
+    <div id="TreeHeight">
       <div id="jsav" class="jsavcanvas"></div>
-    </p>
-    <p class="question">How many internal nodes does this tree have?</p>
-    <p class="solution" data-type="text"><var>ANS</var></p>
-  </div>
-
-  <div id="problem-type-or-description-2">
-    <div class="vars">
-      <var id="ANS">4</var>
+      <p class="question">What is the height of this tree?</p>
+      <div class="solution"><var>4</var></div>
+      <ul class="choices" data-category="true">
+        <li><var>0</var></li>
+        <li><var>1</var></li>
+        <li><var>2</var></li>
+        <li><var>3</var></li>
+        <li><var>4</var></li>
+        <li><var>5</var></li>
+        <li><var>9</var></li>
+        <li><var>"Trees have depth -- they do not have height"</var></li>
+        <li><var>"None of the above"</var></li>
+      </ul>
+      <div class="hints">
+      </div>
     </div>
-    <p class="problem">
+
+    <div id="TreeDepth">
       <div id="jsav" class="jsavcanvas"></div>
-    </p>
-    <p class="question">How many leaf nodes does this tree have?</p>
-    <p class="solution" data-type="text"><var>ANS</var></p>
-  </div>
-
-  <div id="problem-type-or-description-2">
-    <div class="vars">
-      <var id="ANS">6</var>
+      <p class="question">What is the depth of this tree?</p>
+      <div class="solution"><var>"Trees have height -- they do not have depth"</var></div>
+      <ul class="choices" data-category="true">
+        <li><var>0</var></li>
+        <li><var>1</var></li>
+        <li><var>2</var></li>
+        <li><var>3</var></li>
+        <li><var>4</var></li>
+        <li><var>5</var></li>
+        <li><var>9</var></li>
+        <li><var>"Trees have height -- they do not have depth"</var></li>
+        <li><var>"None of the above"</var></li>
+      </ul>
+      <div class="hints">
+      </div>
     </div>
-    <p class="problem">
+
+    <div id="FullComplete">
       <div id="jsav" class="jsavcanvas"></div>
-    </p>
-    <p class="question">How many nodes in the tree have at least one sibling?</p>
-    <p class="solution" data-type="text"><var>ANS</var></p>
-  </div>
-
-  <div id="problem-type-or-description-2">
-    <div class="vars">
-      <var id="ANS">8</var>
-    </div>
-    <p class="problem">
-      <div id="jsav" class="jsavcanvas"></div>
-    </p>
-    <p class="question">How many descendents does the root of this
-tree have?</p>
-    <p class="solution" data-type="text"><var>ANS</var></p>
-  </div>
-
-  <div id="TreeHeight">
-    <div id="jsav" class="jsavcanvas"></div>
-    <p class="question">What is the height of this tree?</p>
-    <div class="solution"><var>4</var></div>
-    <ul class="choices" data-category="true">
-      <li><var>0</var></li>
-      <li><var>1</var></li>
-      <li><var>2</var></li>
-      <li><var>3</var></li>
-      <li><var>4</var></li>
-      <li><var>5</var></li>
-      <li><var>9</var></li>
-      <li><var>"Trees have depth -- they do not have height"</var></li>
-      <li><var>"None of the above"</var></li>
-    </ul>
-    <div class="hints">
-    </div>
-  </div>
-
-  <div id="TreeDepth">
-    <div id="jsav" class="jsavcanvas"></div>
-    <p class="question">What is the depth of this tree?</p>
-    <div class="solution"><var>"Trees have height -- they do not have depth"</var></div>
-    <ul class="choices" data-category="true">
-      <li><var>0</var></li>
-      <li><var>1</var></li>
-      <li><var>2</var></li>
-      <li><var>3</var></li>
-      <li><var>4</var></li>
-      <li><var>5</var></li>
-      <li><var>9</var></li>
-      <li><var>"Trees have height -- they do not have depth"</var></li>
-      <li><var>"None of the above"</var></li>
-    </ul>
-    <div class="hints">
-    </div>
-  </div>
-
-  <div id="TreeDepth">
-    <div id="jsav" class="jsavcanvas"></div>
-    <p class="question">Which statement is correct?</p>
-    <div class="solution"><var>"The tree is neither full nor complete"</var></div>
-    <ul class="choices">
-      <li><var>"The tree is complete but not full"</var></li>
-      <li><var>"The tree is full but not complete"</var></li>
-      <li><var>"The tree is full and complete"</var></li>
-    </ul>
-    <div class="hints">
+      <p class="question">Which statement is correct?</p>
+      <div class="solution"><var>"The tree is neither full nor complete"</var></div>
+      <ul class="choices">
+        <li><var>"The tree is complete but not full"</var></li>
+        <li><var>"The tree is full but not complete"</var></li>
+        <li><var>"The tree is full and complete"</var></li>
+      </ul>
+      <div class="hints">
+      </div>
     </div>
   </div>
 </div>
