Minor tweaks in KA exercises

--- a/Exercises/Hashing/HashFuncTFdisk.html
+++ b/Exercises/Hashing/HashFuncTFdisk.html
@@ -16,7 +16,7 @@
     </div>
     <div class="problems">
       <div id="problem-type-or-description">
-	<p class="problem">Answer TRUE or FALSE.
+	<p class="problem">Answer TRUE or FALSE.</p>
 	<p class="question"><var>TYPE[QCHOICE]</var> hashing works
 	well for disk-based hash systems.</p>
 	<div class="solution"><var>ANSWER[QCHOICE]</var></div>
