--- a/Exercises/Sorting/ExchangeTF2.html
+++ b/Exercises/Sorting/ExchangeTF2.html
@@ -15,17 +15,25 @@
     <div id="problem-type-or-description">
       <p class="problem">Answer TRUE or FALSE.</p>
       <p class="question">
-	Consider an array <code>A</code>
-	of <code>n</code> records, and <code>A_R</code> the same array
-	in reverse order. Adding up the total number of inverted pairs
-	in these two arrays, exactly half must be inverted.</p>
+	Consider an array <code>A</code> of <code>n</code> records,
+        and <code>A_R</code> the same array in reverse order.
+        There are a certain number of pairs, where an arbitrary
+	position <code>i</code> and position <code>j</code> is a pair.
+        Between these two arrays, exactly half of these pairs must be
+	inverted.</p>
       <div class="solution"><var>"False"</var></div>
       <ul class="choices" data-category="true">
 	<li><var>"True"</var></li>
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-        <p>Every pair must be inverted in exactly one of these arrays.</p>
+        <p>Any given pair of records is either in order, or not in
+          order.</p>
+	<p>Being out of order is called an inversion.</p>
+        <p>Any given pair must be inverted in exactly one of these
+          arrays.</p>
+        <p>So every pair must be inverted in either <code>A</code>
+          or <code>A_R</code></p>
       </div>
     </div>
   </div>
