Tweak the Huffman encoding exercise

--- a/Exercises/Development/HuffmanEncodeExercise.html
+++ b/Exercises/Development/HuffmanEncodeExercise.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
-      top: -60px;
+      top: -30px;
       height: 350px;
     }
   </style>
@@ -135,12 +135,11 @@ function genHint(type) {
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">
-        <div id="jsav" class="jsavcanvas"></div></p>
       <p class="question">
         For the above Huffman tree, what is
         the corresponding <var>sequence</var> represented by <var>question</var>? 
-        Type its representation as a concatenation of <var>answer</var>.
+        Type its representation as a series of <var>answer</var>.
+        <div id="jsav" class="jsavcanvas"></div>
       </p>
       <p class="solution" data-type="text"><var>ANS</var></p>
       <div class="hints">
