Minor changes to graph AVs

--- a/AV/Development/PrimAV.html
+++ b/AV/Development/PrimAV.html
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter avTitle">
-        Prim's Minimum Spanning Tree Algorithm
+        Prim's Minimum Cost Spanning Tree Algorithm
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
