Advanced Recursion Tutorial Skeleton

--- a/Exercises/RecurTutor2/btLeafPROG.html
+++ b/Exercises/RecurTutor2/btLeafPROG.html
@@ -99,7 +99,7 @@ $(document).ready(function() {
       <p class="problem" id = "test">Add appropriate lines of code to the following function skeleton so that the function will recursively count the  number of leaf nodes in the binary tree pointed at by "root".  <br />
 
     <textarea  id="codeTextarea">
-int exercise3(BinNode root) {
+int countLeaf(BinNode root) {
   // Your code goes between these lines
 
 
