--- a/Exercises/Development/SequentialTreeBitVectorPRO.html
+++ b/Exercises/Development/SequentialTreeBitVectorPRO.html
@@ -18,25 +18,24 @@
 </head>
 
 <body data-height="650" data-width="950">
+
 <script>
   var jsav;
 
   var initJSAV = function () {
     jsav = new JSAV("jsav");
-    av.
     jsav.recorded();
   }
 
   var makeTree = function () {
     var bt = jsav.ds.binarytree({center: true, visible: true, nodegap: 35});
-    var letters = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
-    var letterIndex = 1;
-    bt.root(letters.charAt(0));
+    bt.root('n');
     //generate random tree with between 4-7nodes
     var numNodes = Math.floor(Math.random() * (7-4))+4;
     var i = 1;
     while (i <= numNodes) {
-      randomNode(bt, bt.root(), letters.charAt(i));
+      //var temp = Math.floor(Math.random() * 100)%2;
+      randomNode(bt, bt.root(), 'n');
       i++;
     }
     bt.layout();
@@ -46,16 +45,26 @@
   function preOrderTraversal(bt) {
     var retString = "";
     var preorderNode = function (node) {
-      retString+=node.value();
+      var isInternal = false;
+      //retString+=node.value();
       if (node.left()) {
+        isInternal = true;
+        retString+='1';
         preorderNode(node.left());
       }
-      else
+      else if (node.right())
+      {
+        retString += '1';
         retString += '/';
+      }
+      else
+      {
+        retString += '0';
+      }
       if (node.right()) {
         preorderNode(node.right());
       }
-      else
+      else if (node.left())
         retString += '/';
     };
     preorderNode(bt.root());
@@ -81,7 +90,7 @@ function randomNode(bt,root, value)
 </script>
 
 <div class="exercise">
-  <p class="question">Using '/' to signify the end of a tree, please write the sequential representation of this tree</p>
+<p class="question">Using a 1 to signify internal nodes, and a 0 to represent leaf nodes, please write the sequential representation of this tree</p>
   <div class="vars">
     <var id="JSAV">initJSAV()</var>
     <var id="BT">makeTree()</var>
