--- a/AV/Development/3satToHC.html
+++ b/AV/Development/3satToHC.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+  <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <link rel="stylesheet" href="3satToHC.css" type="text/css" />
 </head>
 
@@ -43,8 +44,9 @@
 <script src="../../JSAV/lib/jquery.transit.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="../../lib/odsaUtils.js"></script>
-<script src="../../lib/odsaAV.js"></script>
+<script src="../../lib/odsaUtils-min.js"></script>
+<script src="../../lib/odsaAV-min.js"></script>
+<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 <script src="3satToHC.js"></script>
 </body>
 </html>
