--- a/Exercises/Sorting/HeapsortMCQcost.html
+++ b/Exercises/Sorting/HeapsortMCQcost.html
@@ -13,7 +13,8 @@
     <div id="problem-type-or-description">
       <div class="spin">
         <p class="question">What is the {best|average|worst}-case time for
-	  Heapsort to sort an array of n records?</p> 
+	  Heapsort to sort an array of n records that each have unique
+	  key values?</p> 
       </div>
       <div class="solution"><var><code>\Theta(n \log n)</code></var></div>
       <ul class="choices">
