Recursion Tutorials modifications

--- a/Exercises/RecurTutor/rechw2bc15PROG.html
+++ b/Exercises/RecurTutor/rechw2bc15PROG.html
@@ -26,7 +26,7 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Given the following recursive function write down the base case conditions such that this function determines if an integer N is prime or not.
+      <p class="problem" id = "test"> Given the following recursive function write down the base case conditions such that this function determines if an integer X is prime or not. Where X is the number and Y is the divisor which is equals to X-1.
 	  
     <br />
     </h4>
