--- a/Exercises/RecurTutor/recw19PROG.html
+++ b/Exercises/RecurTutor/recw19PROG.html
@@ -30,7 +30,7 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">    Given the following recursive function signature, write down the recursive function reverse a given stack without using any other data structures(or without extra memory). You cannot use any memory at all. All what you have to do is use recursion only to attain this. You don’t need to implement a function to push, pop or check if the stack is empty or not. You may use the given getLast function with no modifications if needed.
+      <p class="problem" id = "test">    Given the following recursive function signature, write down the recursive function reverse a given stack without using any other data structures(or without extra memory). You cannot use any memory at all. All what you have to do is use recursion only to attain this. You don’t need to implement a function to push, pop or check if the stack is empty or not. You will need to use the given getLast function with no modifications.
 <br />
 
 </h4>
