Changed problem message to match the question

--- a/Exercises/Development/SequentialTreeGenTreePRO.html
+++ b/Exercises/Development/SequentialTreeGenTreePRO.html
@@ -89,7 +89,7 @@ function randomNode(bt, value)
 </script>
 
 <div class="exercise">
-  <p class="question" style="top: 10px">Using a ' to signify internal nodes, please write the sequential representation of this tree</p>
+  <p class="question" style="top: 10px">Using a ) to signify the end of a subtree, please write the sequential representation of this tree</p>
   <div class="vars">
     <var id="JSAV">initJSAV()</var>
     <var id="BT">makeTree()</var>
