--- a/Exercises/Development/HuffmanCodingExercise.html
+++ b/Exercises/Development/HuffmanCodingExercise.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Huffman Tree Decoding Exercise</title>
+  <title>Huffman Tree Coding Exercise</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
-      top: -60px;
+      top: -30px;
       height: 350px;
     }
   </style>
@@ -32,41 +32,40 @@ var initJSAV = function() {
   var r = t.root("");
 
   // constructs tree
-  r.left("E");
-  r.right("").right("").right("").right("").right("M");
-  r.right().left("").left("U");
-  r.right().left().right("D");
-  r.right().right().left("L");
-  r.right().right().right().left("C");
-  r.right().right().right().right().left("");
-  r.right().right().right().right().left().left("Z");
-  r.right().right().right().right().left().right("K");
+  r.left("").left("O<br>67");
+  r.left().right("T<br>85");
+  r.right("").right("E<br>120");
+  r.right().left("").right("H<br>50");
+  r.right().left().left("").left("G<br>17");
+  r.right().left().left().right("").left("").left("X<br>4");
+  r.right().left().left().right().left().right("J<br>4");
+  r.right().left().left().right().right("V<br>12");
 
   // Add more classes for leaf nodes for css styling
-  r.left().addClass("huffmanleaf");
-  r.right().right().right().right().right().addClass("huffmanleaf");
-  r.right().left().left().addClass("huffmanleaf");
+  r.left().left().addClass("huffmanleaf");
+  r.left().right().addClass("huffmanleaf");
+  r.right().right().addClass("huffmanleaf");
   r.right().left().right().addClass("huffmanleaf");
-  r.right().right().left().addClass("huffmanleaf");
-  r.right().right().right().left().addClass("huffmanleaf");
-  r.right().right().right().right().left().left().addClass("huffmanleaf");
-  r.right().right().right().right().left().right().addClass("huffmanleaf");
+  r.right().left().left().left().addClass("huffmanleaf");
+  r.right().left().left().right().left().left().addClass("huffmanleaf");
+  r.right().left().left().right().left().right().addClass("huffmanleaf");
+  r.right().left().left().right().right().addClass("huffmanleaf");
 
   // Add edge labels
   r.edgeToLeft().label("0");
   r.edgeToRight().label("1");
-  r.right().edgeToLeft().label("0");
-  r.right().left().edgeToLeft().label("0");
-  r.right().left().edgeToRight().label("1");
+  r.left().edgeToLeft().label("0");
+  r.left().edgeToRight().label("1");
   r.right().edgeToRight().label("1");
-  r.right().right().edgeToLeft().label("0");
-  r.right().right().edgeToRight().label("1");
-  r.right().right().right().edgeToLeft().label("0");
-  r.right().right().right().edgeToRight().label("1");
-  r.right().right().right().right().edgeToRight().label("1");
-  r.right().right().right().right().edgeToLeft().label("0");
-  r.right().right().right().right().left().edgeToLeft().label("0");
-  r.right().right().right().right().left().edgeToRight().label("1");
+  r.right().edgeToLeft().label("0");
+  r.right().left().edgeToRight().label("1");
+  r.right().left().edgeToLeft().label("0");
+  r.right().left().left().edgeToRight().label("1");
+  r.right().left().left().edgeToLeft().label("0");
+  r.right().left().left().right().edgeToRight().label("1");
+  r.right().left().left().right().edgeToLeft().label("0");
+  r.right().left().left().right().left().edgeToRight().label("1");
+  r.right().left().left().right().left().edgeToLeft().label("0");
 
   t.layout();
 }
@@ -86,8 +85,8 @@ function genIndices(type) {
 
 <script>
 function genQuestionOrAnswer(indices, sequenceType, questionOrAnswer) {
-  var letters = ["E", "U", "D", "L", "C", "Z", "K", "M"];
-  var codes = ["0", "100", "101", "110", "1110", "111100", "111101", "11111"];
+  var letters = ["O", "T", "E", "H", "G", "V", "X", "J"];
+  var codes = ["00", "01", "11", "101", "1000", "10011", "100100", "100101"];
   var question = "";
   var answers = "";
   if(sequenceType == 0) {
@@ -123,7 +122,7 @@ function genHint(type) {
 <div class="exercise">
   <div class="vars">
     <var id="JSAV">initJSAV()</var>
-    <var id="type">1</var>
+    <var id="type">randRange(0,1)</var>
     <var id="sequenceNames">["sequence of bits", "letter"]</var>
     <var id="sequence">sequenceNames[type]</var>
     <var id="answerNames">["1s or 0s", "letter"]</var>
@@ -135,12 +134,11 @@ function genHint(type) {
   </div>
   <div class="problems">
     <div id="problem-type-or-description">
-      <p class="problem">
-        <div id="jsav" class="jsavcanvas"></div></p>
       <p class="question">
         For the above Huffman tree, what is
         the corresponding <var>sequence</var> represented by <var>question</var>? 
-        Type its representation as a concatenation of <var>answer</var>.
+        Type its representation as a series of <var>answer</var>.
+        <div id="jsav" class="jsavcanvas"></div>
       </p>
       <p class="solution" data-type="text"><var>ANS</var></p>
       <div class="hints">
